[gd_scene load_steps=3 format=2]

[ext_resource path="res://TodoList.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/check.png" type="Texture" id=2]

[node name="TodoList" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}
check_color = Color( 0.0352941, 0.858824, 0.160784, 1 )

[node name="ResourcePreloader" type="ResourcePreloader" parent="."]
resources = [ PoolStringArray( "check" ), [ ExtResource( 2 ) ] ]

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Margin"]
margin_right = 580.0
margin_bottom = 655.0

[node name="Menu" type="HBoxContainer" parent="Margin/VBoxContainer"]
margin_right = 580.0
margin_bottom = 20.0

[node name="File" type="MenuButton" parent="Margin/VBoxContainer/Menu"]
margin_right = 35.0
margin_bottom = 20.0
text = "File"
items = [ "Choose File", null, 0, false, false, 0, 0, null, "", false ]

[node name="TodoItems" type="ItemList" parent="Margin/VBoxContainer"]
margin_top = 24.0
margin_right = 580.0
margin_bottom = 609.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="Margin/VBoxContainer"]
margin_top = 613.0
margin_right = 580.0
margin_bottom = 627.0
text = "New Item"
align = 1

[node name="AddItem" type="HBoxContainer" parent="Margin/VBoxContainer"]
margin_top = 631.0
margin_right = 580.0
margin_bottom = 655.0
__meta__ = {
"_edit_group_": true
}

[node name="Name" type="LineEdit" parent="Margin/VBoxContainer/AddItem"]
margin_right = 539.0
margin_bottom = 24.0
size_flags_horizontal = 3
placeholder_text = "TODO item"

[node name="Add" type="Button" parent="Margin/VBoxContainer/AddItem"]
margin_left = 543.0
margin_right = 580.0
margin_bottom = 24.0
text = "Add"

[node name="AcceptDialog" type="AcceptDialog" parent="."]
margin_right = 83.0
margin_bottom = 58.0
popup_exclusive = true
resizable = true

[node name="FileDialog" type="FileDialog" parent="."]
margin_right = 315.0
margin_bottom = 322.0
popup_exclusive = true
access = 1
filters = PoolStringArray( "*.json ; JSON Files" )
current_dir = "user://"
current_path = "user://"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="gui_input" from="Margin/VBoxContainer/TodoItems" to="." method="_on_TodoItems_gui_input"]
[connection signal="item_activated" from="Margin/VBoxContainer/TodoItems" to="." method="_on_TodoItems_item_activated"]
[connection signal="item_selected" from="Margin/VBoxContainer/TodoItems" to="." method="_on_TodoItems_item_selected"]
[connection signal="nothing_selected" from="Margin/VBoxContainer/TodoItems" to="." method="_on_TodoItems_nothing_selected"]
[connection signal="text_entered" from="Margin/VBoxContainer/AddItem/Name" to="." method="_on_add_todo_item"]
[connection signal="pressed" from="Margin/VBoxContainer/AddItem/Add" to="." method="_on_add_todo_item"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
